Fix mobile pagination visibility (#303)
* Fix mobile pagination visibility

* Remove right margin/padding from next link when mobile pagination links are visible

--- a/.dev/sass/components/_menus.scss
+++ b/.dev/sass/components/_menus.scss
@@ -363,8 +363,13 @@ body.no-max-width .main-navigation {
 			float: right;
 
 			.page-numbers {
-				&:not(.prev, .next) {
+				&:not(.prev):not(.next) {
 					display: none;
+				}
+
+				&.next {
+					margin-right: 0;
+					padding-right: 0;
 				}
 			}
 		}
